tests/expectations/compiler/function/function_call_tyc_fail.out
Error [ETYC0372003]: Expected type `i8` but type `u8` was found
    --> compiler-test:13:13
     |
  13 |         x = f1(1u8);
     |             ^^^^^^^
Error [ETYC0372003]: Expected type `i8` but type `u8` was found
    --> compiler-test:17:13
     |
  17 |         y = f3(y, z);
     |             ^^^^^^^^
Error [ETYC0372117]: Expected type `u8` but type `i8` was found.
    --> compiler-test:17:16
     |
  17 |         y = f3(y, z);
     |                ^
